# style-transfer-utility

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  setup.cfg  setup.py  setup.sh
.github/workflows/: lint.yaml
style_transfer_utility/: config.py  entry.py  inference.py  utils.py
