[global]
quiet = 1

[metadata]
name = style-transfer-utility
description = 
author = Yifan Wu
version = 0.0.1

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =
    numpy
    opencv-python
    Pillow
    imageio
    imageio-ffmpeg
    psutil
    scikit-image
    click

[aliases]
release = clean --all bdist_wheel

[options.entry_points]
console_scripts =
    stu=style_transfer_utility.entry:main
    style-transfer-utility=style_transfer_utility.entry:main